Default value of 1.0 for the multipilier field. Fixed javascript error regarding exp_total and ts_total variable. Subtables show annotations again. Calendar is not placed behind tables.

--- a/core/skins/standard/datepicker.css
+++ b/core/skins/standard/datepicker.css
@@ -3,7 +3,7 @@
   width:  298px;
   background-color: #333;
   border: 1px solid #000;
-  z-index:500;
+  z-index:500 !important;
   display:none;
 }
 
